website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/styling-layout.mdx
---
description: A Docusaurus site is a pre-rendered single-page React application. You can style it the way you style React apps.
---

import ColorGenerator from '@site/src/components/ColorGenerator';
import IframeWindow from '@site/src/components/BrowserWindow/IframeWindow';

# 樣式與佈局

:::tip

本節重點介紹通過樣式表進行樣式設定。如需更高級的自定義（DOM結構、React代碼等），請參閱[swizzling指南](./swizzling.mdx)。

:::

Docusaurus 網站是一個單頁 React 應用程式。您可以像為 React 應用程式設定樣式一樣為其設定樣式。

根據您的偏好和您嘗試構建的網站類型，有幾種可行的方法/框架。行為更像網絡應用程式且具有高度互動性的網站將受益於更現代的樣式設定方法，這些方法將樣式與組件放在一起。當您希望自定義或 swizzle 組件時，組件樣式設定也可能特別有用。

## 全局樣式 {#global-styles}

這是最傳統的樣式設定方式，大多數開發人員（包括非前端開發人員）都熟悉這種方式。對於沒有太多自定義的小型網站來說，這種方式效果很好。

如果您使用 `@docusaurus/preset-classic`，您可以創建自己的 CSS 文件（例如 `/src/css/custom.css`），並通過將其作為經典主題的選項來全局導入它們。

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // highlight-start
        theme: {
          customCss: ['./src/css/custom.css'],
        },
        // highlight-end
      },
    ],
  ],
};
```

您在該文件中編寫的任何 CSS 都將全局可用，並可以直接使用字符串文字引用。

```css title="/src/css/custom.css"
.purple-text {
  color: rebeccapurple;
}
```

```jsx
function MyComponent() {
  return (
    <main>
      <h1 className="purple-text">Purple Heading!</h1>
    </main>
  );
}
```

如果要為任何元素添加 CSS，您可以在瀏覽器中打開 DevTools 來檢查其類名。類名有幾種類型：

- **主題類名**。這些類名在[下一小節](#theme-class-names)中詳細列出。它們沒有任何默認屬性。在您的自定義 CSS 中，應始終優先針對這些穩定的類名。
- **Infima 類名**。這些類名在經典主題中找到，通常遵循 [BEM 約定](http://getbem.com/naming/)的 `block__element--modifier`。它們通常是穩定的，但仍被視為實現細節，因此您通常應避免針對它們。但是，您可以[修改 Infima CSS 變量](#styling-your-site-with-infima)。
- **CSS 模塊類名**。這些類名在生產環境中帶有哈希值（`codeBlockContainer_RIuc`），在開發環境中則附加有長文件路徑。它們被視為實現細節，您幾乎應始終避免在自定義 CSS 中針對它們。如果必須，可以使用忽略哈希值的[屬性選擇器](https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors)（`[class*='codeBlockContainer']`）。

### 主題類名 {#theme-class-names}

我們提供了一些穩定的 CSS 類名，用於實現健壯且可維護的全局佈局樣式設定。這些名稱與主題無關，旨在供自定義 CSS 使用。

:::tip

如果找不到創建健壯 CSS 選擇器的方法，請[報告您的自定義用例](https://github.com/facebook/docusaurus/discussions/5468)，我們將考慮添加新的類名。

:::

<details>

<summary>Exhaustive list of stable class names</summary>

```mdx-code-block
import ThemeClassNamesCode from '!!raw-loader!@site/../packages/docusaurus-theme-common/src/utils/ThemeClassNames.ts';
import CodeBlock from '@theme/CodeBlock';

<CodeBlock className="language-ts">
  {ThemeClassNamesCode
    // remove source comments
    .replace(/\/\*[\s\S]*?\*\/|\/\/.*/g,'')
    .replace(/^ *\n/gm,'')
    .trim()}
</CodeBlock>
```

</details>

### 使用 Infima 設定網站樣式 {#styling-your-site-with-infima}

`@docusaurus/preset-classic` 使用 [Infima](https://infima.dev/) 作為底層樣式框架。Infima 提供了適合以內容為中心的網站（博客、文檔、登陸頁面）的靈活佈局和常見 UI 組件樣式。有關更多詳細信息，請查看 [Infima 網站](https://infima.dev/)。

當您使用 `create-docusaurus` 搭建 Docusaurus 項目時，網站將生成基本的 Infima 樣式表和默認樣式。您可以全局覆蓋 Infima CSS 變量。

```css title="/src/css/custom.css"
:root {
  --ifm-color-primary: #25c2a0;
  --ifm-code-font-size: 95%;
}
```

Infima 使用每種顏色的 7 種色調。我們建議使用 [ColorBox](https://www.colorbox.io/) 來為您選擇的主色找到不同的色調。

或者，您可以使用以下工具為網站生成不同色調，並將變數複製到 `/src/css/custom.css` 中。

<ColorGenerator />

### 深色模式 {#dark-mode}

在淺色模式下，`<html>` 元素會帶有 `data-theme="light"` 屬性；深色模式下則為 `data-theme="dark"`。因此，您可以透過針對特定屬性的 `html` 元素來限定 CSS 僅在深色模式下生效。

```css
/* Overriding root Infima variables */
[data-theme='dark'] {
  --ifm-color-primary: #4e89e8;
}
/* Styling one class specially in dark mode */
[data-theme='dark'] .purple-text {
  color: plum;
}
```

:::tip

您可以直接透過 `docusaurus-theme` 查詢字串參數來初始化 Docusaurus 主題。

範例：

<IframeWindow url="/docs/?docusaurus-theme=dark" />

<IframeWindow url="/docs/configuration?docusaurus-theme=light" />

:::

### 資料屬性 {#data-attributes}

您可以透過遵循 `docusaurus-data-<key>` 模式的查詢字串參數來注入 `<html>` 資料屬性。這讓您能根據查詢字串靈活地為頁面套用不同樣式。

例如，讓我們為其中一個頁面套用紅色邊框並隱藏導覽列：

```css title="/src/css/custom.css"
html[data-navbar='false'] .navbar {
  display: none;
}

html[data-red-border] div#__docusaurus {
  border: red solid thick;
}
```

<IframeWindow url="/docs/?docusaurus-data-navbar=false&docusaurus-data-red-border" />

:::tip[Iframe 模式]

如果您計劃透過 iframe 在其他網站嵌入 Docusaurus 頁面，可以建立替代顯示模式並使用如 `https://mysite.com/docs/myDoc?docusaurus-data-mode=iframe` 的 iframe 網址。您需自行提供額外樣式，並決定保留或隱藏哪些 UI 元素。

:::

### 行動裝置視圖 {#mobile-view}

Docusaurus 使用 `996px` 作為行動裝置螢幕寬度與桌機的切換點。若您希望在行動視圖中呈現不同佈局，可使用媒體查詢。

```css
.banner {
  padding: 4rem;
}
/** In mobile view, reduce the padding */
@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}
```

:::tip[自訂斷點]

部分 React 元件（如標頭和側邊欄）在行動視圖中會實作不同的 JavaScript 邏輯。若您在自訂 CSS 中變更斷點值，可能還需透過[替換元件](./swizzling.mdx)來更新 `useWindowSize` 鉤子的呼叫，並傳入明確的選項參數。

:::

## CSS 模組 {#css-modules}

若要使用 [CSS 模組](https://github.com/css-modules/css-modules)為元件設定樣式，請將樣式表檔案命名為 `.module.css` 後綴（例如 `welcome.module.css`）。Webpack 會將此類 CSS 檔案視為 CSS 模組載入，您需透過導入的 CSS 模組屬性來引用類別名稱（而非直接使用字串）。此慣例與 [Create React App](https://facebook.github.io/create-react-app/docs/adding-a-css-modules-stylesheet) 相同。

```css title="styles.module.css"
.main {
  padding: 12px;
}

.heading {
  font-weight: bold;
}

.contents {
  color: #ccc;
}
```

```jsx
import styles from './styles.module.css';

function MyComponent() {
  return (
    <main className={styles.main}>
      <h1 className={styles.heading}>Hello!</h1>
      <article className={styles.contents}>Lorem Ipsum</article>
    </main>
  );
}
```

建置時，Webpack 會將類別名稱處理為全域唯一的類別名稱。

## CSS-in-JS {#css-in-js}

:::warning

CSS-in-JS 支援目前仍在開發中，因此像 MUI 這樣的函式庫可能會出現顯示異常。[歡迎提交 PR](https://github.com/facebook/docusaurus/issues/1640)。

:::

## Sass/SCSS {#sassscss}

若要使用 Sass/SCSS 作為 CSS 預處理器，請安裝非官方的 Docusaurus 外掛 [`docusaurus-plugin-sass`](https://github.com/rlamana/docusaurus-plugin-sass)。此外掛同時支援全域樣式與 CSS 模組方法：

1. 安裝 [`docusaurus-plugin-sass`](https://github.com/rlamana/docusaurus-plugin-sass)：

```bash npm2yarn
npm install --save docusaurus-plugin-sass sass
```

2. 在 `docusaurus.config.js` 檔案中包含此外掛：

```js title="docusaurus.config.js"
export default {
  // ...
  // highlight-next-line
  plugins: ['docusaurus-plugin-sass'],
  // ...
};
```

3. 像平常一樣撰寫並導入你的 Sass/SCSS 樣式表。

### 使用 Sass/SCSS 的全局樣式 {#global-styles-using-sassscss}

現在你可以將 `@docusaurus/preset-classic` 的 `customCss` 屬性指向你的 Sass/SCSS 文件：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // ...
        theme: {
          // highlight-next-line
          customCss: ['./src/css/custom.scss'],
        },
        // ...
      },
    ],
  ],
};
```

### 使用 Sass/SCSS 的模塊 {#modules-using-sassscss}

將你的樣式表文件命名為 `.module.scss` 後綴（例如 `welcome.module.scss`）而非 `.css`。Webpack 將使用 `sass-loader` 預處理你的樣式表並將其作為 CSS 模塊加載。

```scss title="styles.module.scss"
.main {
  padding: 12px;

  article {
    color: #ccc;
  }
}
```

```jsx
import styles from './styles.module.scss';

function MyComponent() {
  return (
    <main className={styles.main}>
      <article>Lorem Ipsum</article>
    </main>
  );
}
```